force-app/main/default/objects/User/fields/shareconnect__Share_Connect_Tokens__c.field-meta.xml
<CustomField>
    <fullName>shareconnect__Share_Connect_Tokens__c</fullName>
    <label>Share Connect Tokens</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>