force-app/main/default/objects/User/fields/zaapit__Enable_ZaapIT_s_Layout_Editor__c.field-meta.xml
<CustomField>
    <fullName>zaapit__Enable_ZaapIT_s_Layout_Editor__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enable the user to change ZaapIT&apos;s Layout Editor for smart tables/update</description>
    <label>Enable ZaapIT&apos;s Layout Editor</label>
    <type>Checkbox</type>
</CustomField>