force-app/main/default/objects/User/fields/zaapit__Enable_ZaapIT_s_View_Editor__c.field-meta.xml
<CustomField>
    <fullName>zaapit__Enable_ZaapIT_s_View_Editor__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Enable ZaapIT&apos;s View Editor for none admin users</description>
    <inlineHelpText>Enable ZaapIT&apos;s View Editor for none admin users (don&apos;t mark with enable layout editor for the same user)</inlineHelpText>
    <label>Enable ZaapIT&apos;s View Editor</label>
    <type>Checkbox</type>
</CustomField>